src/ui/radarr_ui/indexers/snapshots/managarr__ui__radarr_ui__indexers__indexers_ui_tests__tests__indexers_ui_renders_empty_indexers.snap
---
source: src/ui/radarr_ui/indexers/indexers_ui_tests.rs
expression: output
---
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
