src/ui/radarr_ui/indexers/snapshots/managarr__ui__radarr_ui__indexers__indexers_ui_tests__tests__indexers_ui_renders_with_indexers.snap
---
source: src/ui/radarr_ui/indexers/indexers_ui_tests.rs
expression: output
---
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Indexer                  RSS             Automatic Search Interactive Sea Priority        Tags                       
=> Test Indexer 1           Enabled         Enabled          Enabled         25                                         
   Test Indexer 2           Disabled        Disabled         Disabled        0
